--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "5.0.0",
+    "bcrypt": "5.1.0",
     "dotenv": "16.3.1",
     "fastify": "4.19.2",
     "zod": "3.21.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
+    "@types/bcrypt": "5.0.0",
     "@types/node": "20.4.2",
     "prisma": "5.0.0",
     "tsup": "7.1.0",
