--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "prisma": "5.0.0",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vite-tsconfig-paths": "4.2.1",
+    "vitest": "0.34.5"
   }
 }
