--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup src --out-dir build",
     "lint": "eslint ./ --ext .ts --fix",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcrypt": "5.0.0",
     "@types/node": "20.4.2",
+    "@vitest/coverage-v8": "0.34.5",
     "prisma": "5.0.0",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
