--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@prisma/client": "5.0.0",
     "bcrypt": "5.1.0",
+    "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "fastify": "4.19.2",
     "zod": "3.21.4"
