--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "7.2.4",
     "@prisma/client": "5.0.0",
     "bcrypt": "5.1.0",
     "dayjs": "1.11.10",
