--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "lint": "eslint ./ --ext .ts --fix",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
@@ -22,13 +26,14 @@
     "dayjs": "1.11.10",
     "dotenv": "16.3.1",
     "fastify": "4.19.2",
-    "zod": "3.21.4"
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcrypt": "5.0.0",
     "@types/node": "20.4.2",
     "@vitest/coverage-v8": "0.34.5",
+    "npm-run-all": "4.1.5",
     "prisma": "5.0.0",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
