--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcrypt": "5.0.0",
     "@types/node": "20.4.2",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "0.34.5",
     "npm-run-all": "4.1.5",
     "prisma": "5.0.0",
+    "supertest": "6.3.3",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
